--- a/appsettings.json
+++ b/appsettings.json
@@ -1,13 +1,12 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=tcp:servidor-equipe-otima.database.windows.net,1433;Initial Catalog=Qbank;Persist Security Info=False;User ID=marcelos161;Password=Pbdi705415.;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=MeuBancoDeDados;Trusted_Connection=True;"
-  }
+  "AllowedHosts": "*"
 }
-
